@@ -1,8 +1,10 @@
 plugins {
     kotlin("jvm")
+    id("org.jlleitschuh.gradle.ktlint") version "12.1.0"
     application
     java
 }
+val ktlintS by configurations.creating
 
 group = "org.example"
 version = "2.0"
@@ -18,11 +20,64 @@ dependencies {
     implementation("org.apache.poi:poi:5.2.0")
     implementation("org.apache.poi:poi-ooxml:5.2.0")
     implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core-jvm:1.8.0")
+    ktlintS("com.pinterest.ktlint:ktlint-cli:1.2.1") {
+        attributes {
+            attribute(Bundling.BUNDLING_ATTRIBUTE, objects.named(Bundling.EXTERNAL))
+        }
+    }
+}
+val ktlintCheckS by tasks.registering(JavaExec::class) {
+    group = LifecycleBasePlugin.VERIFICATION_GROUP
+    description = "Check Kotlin code style"
+    classpath = ktlintS
+    mainClass.set("com.pinterest.ktlint.Main")
+    // see https://pinterest.github.io/ktlint/install/cli/#command-line-usage for more information
+    args(
+        "**/src/**/*.kt",
+        "**.kts",
+        "!**/build/**",
+    )
 }
 
-application
-java
+tasks.check {
+    dependsOn(ktlintCheckS)
+}
 
+tasks.register<JavaExec>("ktlintFormatS") {
+    group = LifecycleBasePlugin.VERIFICATION_GROUP
+    description = "Check Kotlin code style and format"
+    classpath = ktlintS
+    mainClass.set("com.pinterest.ktlint.Main")
+    jvmArgs("--add-opens=java.base/java.lang=ALL-UNNAMED")
+    // see https://pinterest.github.io/ktlint/install/cli/#command-line-usage for more information
+    args(
+        "-F",
+        "**/src/**/*.kt",
+        "**.kts",
+        "!**/build/**",
+    )
+}
+application {
+    mainClass.set("RunnerKt")
+}
+tasks {
+    val fatJar =
+        register<Jar>("fatJar") {
+            dependsOn.addAll(listOf("compileJava", "compileKotlin", "processResources"))
+            archiveClassifier.set("standalone")
+            duplicatesStrategy = DuplicatesStrategy.EXCLUDE
+            manifest { attributes(mapOf("Main-Class" to application.mainClass)) }
+            val sourcesMain = sourceSets.main.get()
+            val contents =
+                configurations.runtimeClasspath.get()
+                    .map { if (it.isDirectory) it else zipTree(it) } +
+                    sourcesMain.output
+            from(contents)
+        }
+    build {
+        dependsOn(fatJar)
+    }
+}
 tasks.test {
     useJUnitPlatform()
 }
